dist/LineScript-win64-20260616/tests/cases/compile_fail/string_arithmetic.lsc
main() -> i64 do
  declare x = "a" + "b"
  println(x)
  return 0
end
